--- a/index.html
+++ b/index.html
@@ -1,50 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <title>Lab 8</title>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link href='style.css' rel='stylesheet' type='text/css' />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Final</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/slicknav.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+          $(".nav3").slicknav({
+              prependTo: "#mobilemenu"
+          });
+      });
+  </script>
 </head>
-
 <body>
-    <div class="wrapper">
-        <div class = "header">
-            <div class = "headericon"><i class = "fa fa-money"></i><span>Header area with money icon</span></div>
+<div class = "site">
+    <div id = "mobilemenu">
+        <nav class="nav3">
+            <ul class="nav_list">
+                <li class="nav_item"><a href="index.html">Home</a></li>
+                <li class="nav_item"><a href="#">About</a></li>
+                <li class="nav_item"><a href="#">Speaking and Media</a></li>
+                <li class="nav_item"><a href="#">Publication and Funding</a></li>
+                <li class="nav_item"><a href="#">Lab Team </a></li>
+                <li class="nav_item"><a href="#">More</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class = "nav">
+        <div class = "logo"><img src="images/Capture.PNG" alt="logo"></div>
+        <div class = "name">Abbie E. Smith-Ryan, PhD</div>
+        <div class = "nav-bar">
+                <div class = "home"><a href = "index.html">Home</a></div>
+                <div class = "about"><a>About</a></div>
+                <div class = "sandm"><a>Speaking and Media</a></div>
+                <div class = "pandf"><a>Publication and Funding</a></div>
+                <div class = "lab-team"><a>Lab Team</a></div>
+                <div class = "more"><a>More</a></div>
         </div>
-        <div class = "aside1">
-            <div class = "menu">
-                <div class = "item1 button">Home</div>
-                <div class = "item2 button">About</div>
-                <div class = "item3 button">Products</div>
-                <div class = "item4 button">Contact</div>
-            </div>
-        </div>
-        <div class = "main">
-            <div class = "mainmenu">
-                <div class = "item5">
-                        <iframe width= 100% height="100%"
-                                src="https://www.youtube.com/embed/-Jhl95a83yY">
-                        </iframe>
-                </div>
-                <div class = "item6"></div>
-                <div class = "item7"></div>
-                <div class = "item8"><p class = "text">Hi!</p></div>
-
-            </div>
-        </div>
-        <div class = "footer">
-            <div class = "footer-form">
-                <div class = "sign">Sign up for our mailing list</div>
-                <div class = "name">Your name</div>
-                <div contenteditable = "true" class = "textarea" ></div>
-                <div class = "email">Email</div>
-                <div contenteditable = "true" class = "textarea2" ></div>
-                <div class = "submit">Submit</div>
-            </div>
+        <div class = "social-icons">
+            <div class = "twitter"><a href="#" class="fa fa-twitter"></a></div>
+            <div class = "instagram"><a href="#" class="fa fa-instagram"></a></div>
+            <div class = "linked-in"><a href="#" class="fa fa-linkedin"></a></div>
         </div>
     </div>
-</body>
+    <div class = "header">
+        <div class = "title">
+            <h1>Abbit E. Smith-Ryan, PhD</h1>
+            <p>CSCS*D, FACSM, FNSCA, FISSN</p>
+            <p>Exercise Physiology* Nutrition</p>
+            <div class = "button"><a href = "index2.html">Support Research</a></div>
+        </div>
+        <div class = "title-box">
+                <div class = "title-image"><img src = "images/Capture4.PNG" alt = "pic"></div>
+                <div class = "about-box">
+                    <h2>About Me</h2>
+                    <p class = "phrase">Authenticity requires vulnerability, transparency, & integrity.</p>
+                    <p class = "mission">I am motivated by the opportunity to improve the health and 
+                        quality of life of others. My research focuses on feasible 
+                        and effective ways to improve health, body composition, and exercise performance.
+                    </p>
+                    <div class = "read-mores"><a>Read More...</a></div>
+                </div>
+        </div>
+    </div>
+    <div class = "info">
+        <div class = "card1 card">
+            <div><img src = "images/Capture8.PNG" alt = "please"></div>
+            <h3>Speaking and Media</h3>
+            <div class = "line"></div>
+            <p>Sharing evidence-based facts to practitioners, researchers, and every day people is an 
+                essential component to my research line.  I have been fortunate to speak to a number of 
+                diverse audiences. Sharing knowledge through podcasts and media are also important pieces of 
+                translation.  See below for a glimpse of topics I cover.  I would love to have the opportunity to 
+                highlight research at your event or to your group.
+            </p>
+            <div class = "link"><a>Selected Highlights...</a></div>
+        </div>
+        <div class = "card2 card">
+            <div><img src = "images/Capture9.PNG" alt = "please"></div>
+            <h3>Publishing and Funding</h3>
+            <div class = "line"></div>
+            <p>1. Abbie E. Smith-Ryan, Katie R. Hirsch, Malia N.M. Blue, Meredith G. Mock, Eric T. Trexler. High-fat breakfast meal replacement: implications on body composition, metabolic markers, and satiety. Nutrients.  2019 Apr 17; 11 (4)
+                2. Eric T. Trexler*, Adam Persky, Eric D. Ryan, Todd A. Schwartz, Lee Stoner, Abbie E. Smith-Ryan. Acute effects of citrulline supplementation on high-intensity strength and power performance ...
+            </p>
+            <div class = "link"><a>Explore Full List...</a></div>
+        </div>
+        <div class = "card3 card">
+            <div><img src = "images/Capture10.PNG" alt = "please"></div>
+            <h3>Lab Team</h3>
+            <div class = "line"></div>
+            <div class = "extra">
+                <p> Malia Blue, MA, PhD (c) </p>
+                <p> Gabiella Brewer, BS </p>
+                <p> Kaite Hirsch, MA, PhD (c) </p>
+                <p> Casey Greenwalt, BA</p>
+            </div>
+            <div class = "link"><a>See Lab Team...</a></div>
+        </div>
+    </div>
+    <div class = "contact">
+        <div class = "contact1"><h3>Contact Me</h3></div>
+        <div class = "name1" contentEditable="true"> Name </div>
+        <div class = "email" contentEditable="true"> Email </div>
+        <div class = "subject" contentEditable="true"> Subject </div>
+        <div class = "subject1" contentEditable="true"> Type your message here...</div>
+        <div class = "submit"> <p>Submit</p> </div>
+    </div>
+    <div class = "footer">
+        <div class = "submit-form"> Subscription Form</div>
+        <div class = "email2" contentEditable="true">Email Address</div>
+        <div class = "submit2"><p>Submit</p></div>
+        <div class = "social-icons-2">
+            <div class = "twitter2"><a href="#" class="fa fa-twitter"></a></div>
+            <div class = "instagram2"><a href="#" class="fa fa-instagram"></a></div>
+            <div class = "linked-in2"><a href="#" class="fa fa-linkedin"></a></div>
+        </div>
+        <div class = "name2"> <p>@ 2019 by Abbie E. Smith-Ryan, PhD. Prouldly created by Raheem Moore</p></div>
+    </div>
+</div>
 
+</body>
 </html>
