--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class = "header">
         <div class = "title">
-            <h1>Abbit E. Smith-Ryan, PhD</h1>
+            <h1>Abbie E. Smith-Ryan, PhD</h1>
             <p>CSCS*D, FACSM, FNSCA, FISSN</p>
             <p>Exercise Physiology* Nutrition</p>
             <div class = "button"><a href = "index2.html">Support Research</a></div>
